--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.bankkroll.xyz/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://www.bankkroll.xyz/favicon.ico" />
     <link rel="canonical" href="https://bankkroll.xyz" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://www.bankkroll.xyz/manifest.json" />
     <title>Bankkroll - Developer Portfolio</title>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Hello! I'm Bankkroll and I love solving problems through code. Currently growing to be a Full Stack Developer." />
@@ -20,8 +20,8 @@
     <meta property="og:url" content="https://bankkroll.xyz" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Bankkroll - Developer Portfolio" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:image" content="https://www.bankkroll.xyz/logo.png" />
+    <meta name="twitter:image" content="https://www.bankkroll.xyz/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bankkroll - Developer Portfolio" />
     <meta name="twitter:description" content="Hello! I'm Bankkroll and I love solving problems through code. Currently growing to be a Full Stack Developer." />
